2011-01-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* new-exceptions/bspsupport/ppc_exc_categories.c: Fixed e200 machine
	check category.

2010-12-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am, preinstall.am, mpc83xx/include/mpc83xx.h,
	mpc83xx/network/tsec.c, mpc83xx/network/tsec.h: Make it possible to
	use the TSEC driver for other systems.

2010-12-29	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shared/include/cpuIdent.c, shared/include/cpuIdent.h: Added support
	for e500v2.  Removed IVPR/IVOR/HWIVOR features since they are included
	in Book E.
	* new-exceptions/bspsupport/vectors.h,
	new-exceptions/bspsupport/ppc_exc.S,
	new-exceptions/bspsupport/ppc_exc_address.c,
	new-exceptions/bspsupport/ppc_exc_categories.c,
	new-exceptions/bspsupport/ppc_exc_initialize.c,
	new-exceptions/bspsupport/ppc_exc_prologue.c: Added support for
	e500v2.  Added exception vector defines for Book E types.  Removed
	e200 exception vector defines.  Added e500 exception vector defines.
	Unified IVOR calculation for e200 and e500 (e200z1 has hard wired
	IVOR values).
	* mpc55xx/include/mpc55xx.h, mpc55xx/misc/copy.S: Removed zero
	functions.

2010-12-23	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* mpc83xx/i2c/mpc83xx_i2cdrv.c: Fixed interrupt flag clearing for
	MPC55XX family.

2010-12-22	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* new-exceptions/bspsupport/ppc_exc.S: Comment.
	* new-exceptions/bspsupport/ppc_exc_address.c: Fixed address
	calculation for e200z1 core.

2010-11-30	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* mpc55xx/edma/edma.c: Use rtems_chain_first() and do not directly
	access the structure.

2010-11-12	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* mpc55xx/include/irq.h: Include missing <bspopts.h>.  Format.
	* mpc83xx/include/mpc83xx.h, mpc83xx/i2c/mpc83xx_i2cdrv.h,
	mpc83xx/i2c/mpc83xx_i2cdrv.c: Changes to use this driver for the
	MPC55XX family.
